# internal/modules/roles/handler/role_handler.go
@@ -6,7 +6,6 @@ import (
 
 	"github.com/gofiber/fiber/v2"
 	roleModel "github.com/jumayevgadam/tsu-toleg/internal/models/role"
-	roleOps "github.com/jumayevgadam/tsu-toleg/internal/modules/roles"
 	"github.com/jumayevgadam/tsu-toleg/pkg/errlst"
 	"github.com/jumayevgadam/tsu-toleg/pkg/errlst/tracing"
 	"github.com/jumayevgadam/tsu-toleg/pkg/reqvalidator"
@@ -14,21 +13,18 @@ import (
 	"go.opentelemetry.io/otel/codes"
 )
 
-var (
-	_ roleOps.Handlers = (*RoleHandler)(nil)
-)
-
-// RoleHandler is for calling methods from service.
-type RoleHandler struct {
-	service roleOps.Service
-}
-
-// NewRoleHandler creates and returns a new instance of RoleHandler.
-func NewRoleHandler(service roleOps.Service) *RoleHandler {
-	return &RoleHandler{service: service}
-}
-
 // AddRole handleris method adds a new role to the system and returns the created role's id.
+// @Summary Add-Role.
+// @Description creates a new role and returns its id.
+// @Tags Roles
+// @ID add-role
+// @Accept multipart/form-data
+// @Produce json
+// @Param roleReq formData roleModel.DTO true "role request payload"
+// @Success 200 {integer} integer 1
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /role/create [post]
 func (h *RoleHandler) AddRole() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[RoleHandler][AddRole]").Start(c.Context(), "[RoleHandler]")
@@ -54,6 +50,17 @@ func (h *RoleHandler) AddRole() fiber.Handler {
 }
 
 // GetRole handler method fetches a role by its id and returns its details.
+// @Summary Get-Role
+// @Description retrieve role by identified id.
+// @Tags Roles
+// @ID get-role
+// @Accept multipart/form-data
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {object} roleModel.DTO
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /role/{id} [get]
 func (h *RoleHandler) GetRole() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[RoleHandler]").Start(c.Context(), "[GetRole]")
@@ -77,6 +84,15 @@ func (h *RoleHandler) GetRole() fiber.Handler {
 }
 
 // GetRoles handler method fetches and returns a list of all roles.
+// @Summary List-Roles
+// @Description list roles
+// @Tags Roles
+// @ID list-roles
+// @Produce json
+// @Success 200 {object} []roleModel.DTO
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /role/get-all [get]
 func (h *RoleHandler) GetRoles() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[RoleHandler]").Start(c.Context(), "GetRoles")
@@ -95,6 +111,17 @@ func (h *RoleHandler) GetRoles() fiber.Handler {
 }
 
 // DeleteRole handler method deletes a role from the system identified by the given id.
+// @Summary Delete-Role
+// @Description deletes role using identified role id.
+// @Tags Roles
+// @ID delete-role
+// @Accept multipart/form-data
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {string} string "role successfully deleted"
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /role/{id} [delete]
 func (h *RoleHandler) DeleteRole() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[RoleHandler]").Start(c.Context(), "[DeleteRole]")
@@ -117,6 +144,18 @@ func (h *RoleHandler) DeleteRole() fiber.Handler {
 }
 
 // UpdateRole handler method updates an existing role based on the provided id and new role data.
+// @Summary Update-Role
+// @Description updating roles only giving rolename and do not use roleID, only can change roleName by given id.
+// @Tags Roles
+// @ID update-role
+// @Accept multipart/form-data
+// @Produce json
+// @Param id path int true "id"
+// @Param roleReq formData roleModel.DTO true "update request for roles"
+// @Success 200 {string} string "role successfully updated"
+// @Failure 400 {object} errlst.RestErr
+// @Failure 500 {object} errlst.RestErr
+// @Router /role/{id} [put]
 func (h *RoleHandler) UpdateRole() fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		ctx, span := otel.Tracer("[RoleHandler]").Start(c.Context(), "[UpdateRole]")
@@ -130,7 +169,11 @@ func (h *RoleHandler) UpdateRole() fiber.Handler {
 
 		var roleReq roleModel.DTO
 		if err := reqvalidator.ReadRequest(c, &roleReq); err != nil {
+			if roleReq.RoleName == "" {
+				return c.Status(fiber.StatusOK).JSON("update structure has no value")
+			}
 			tracing.EventErrorTracer(span, err, errlst.ErrFieldValidation.Error())
+
 			return errlst.Response(c, err)
 		}
 		roleReq.ID = roleID
